<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <DUT Name="ST_MeasureStatistics" Id="{e92808e9-b938-4e4d-a6c1-8d1d73bd8daa}">
    <Declaration><![CDATA[TYPE ST_MeasureStatistics :
STRUCT
	 bOutLimitMax	 : BOOL;
	 bOutLimitMin    : BOOL;
	 nMesureFaultMin : UINT;
	 nMesureFaultMax : UINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>